--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <main>
+        <section id="login">
+            <div>
+
+            </div>
+            <div>
+                
+            </div>
+        </section>
+    </main>
 </body>
 </html>
