--- a/video.html
+++ b/video.html
@@ -1,1 +1,4 @@
-<iframe width="1200" height="600" src="https://www.youtube.com/embed/AKj3L3ouVAk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="98%" height="98%" src="https://www.youtube.com/embed/Ec7Vu96wdpA" title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
