--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="Estilos/style.css">
     <link rel="stylesheet" href="Estilos/mediaquery.css">
     <title>Login</title>
@@ -21,13 +22,15 @@
                     seu ambiente!</p>
                     <form action="login.php" method="post">
                         <div class="campo">
-                            <label for="ilogin">Login</label>
-                            <input type="email" name="login" id="ilogin" placeholder="Seu e-mail">
+                            <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                            <label for="ilogin"><i class="material-icons">person</i></label>
                         </div>
                         <div class="campo">
-                            <label for="isenha">Senha</label>
-                            <input type="password" name="senha" id="isenha" placeholder="Sua senha">
+                            <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                            <label for="isenha"><i class="material-icons">vpn_key</i></label>
                         </div>
+                        <input type="submit" value="Entrar">
+                        <a target="_blank" href="esqueci.html">Esqueci a senha<i class="material-icons">mail</i></a>
                     </form>
             </div>
         </section>
