--- a/video.html
+++ b/video.html
@@ -1,4 +1,4 @@
-<iframe width="99%" height="99%" src="https://www.youtube.com/embed/htekZ2wA7Zo" title="YouTube video player"
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/JDS9ZLpoS6E" title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen></iframe>
