--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <label for="isenha"><i class="material-icons">vpn_key</i></label>
                         </div>
                         <input type="submit" value="Entrar">
-                        <a target="_blank" href="esqueci.html">Esqueci a senha<i class="material-icons">mail</i></a>
+                        <a class="botao" target="_blank" href="esqueci.html">Esqueci a senha<i class="material-icons">mail</i></a>
                     </form>
             </div>
         </section>
